# magnum-test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: resources.conf
res/shaders/: TexturedTriangleShader.frag  TexturedTriangleShader.vert
src/: CMakeLists.txt  ColoredObject.cpp  ColoredObject.h  MyApplication.cpp  TexturedObject.cpp  TexturedObject.h  TexturedTriangleShader.cpp  TexturedTriangleShader.h  Types.h  configure.h.cmake
