cmake_minimum_required(VERSION 3.15)

project(MyApplication)

find_package(SDL2 REQUIRED)

set(CORRADE_WITH_UTILITY ON CACHE BOOL "" FORCE)
add_subdirectory(external/corrade EXCLUDE_FROM_ALL)

set(MAGNUM_WITH_ANYIMAGEIMPORTER ON CACHE BOOL "" FORCE)
set(MAGNUM_WITH_ANYSCENEIMPORTER ON CACHE BOOL "" FORCE)
set(MAGNUM_WITH_TGAIMPORTER ON CACHE BOOL "" FORCE)
set(MAGNUM_WITH_SDL2APPLICATION ON CACHE BOOL "" FORCE)
add_subdirectory(external/magnum EXCLUDE_FROM_ALL)

add_subdirectory(src)
